Fix mobile overflow state

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,7 @@ main {
   padding: 2rem;
   text-align: center;
 
-  overflow: scroll ;
+  overflow: hidden;
 
   .illustration-mobile {
     position: absolute;
